--- a/EHR_website/doctor/doctor-dashboard.html
+++ b/EHR_website/doctor/doctor-dashboard.html
@@ -130,5 +130,6 @@
     <script src="doctor-consult.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+    <script src="file-crypto.js"></script>
 </body>
 </html>
