--- a/EHR_website/doctor/medical-prescription-view.html
+++ b/EHR_website/doctor/medical-prescription-view.html
@@ -129,7 +129,7 @@
             </div>
         </div>
 
-        <button class="back-button" onclick="goBack()">Go Back</button>
+        <button class="generatePrescriptionPDF" onclick="generatePrescriptionPDF()">Generate PDF</button>
     </div>
 
 
